tests/negative_tests/reference_valid/comparison_to_bool.c
// VALID - comparison to bool is correct
int main() {
    bool x;
    x = (5 > 3);  // OK: comparison returns bool
    return 0;
}
